2002-04-27  Alan Modra  <amodra@bigpond.net.au>

	Merge from mainline
	2002-03-19  Hans-Peter Nilsson  <hp@axis.com>
	* ld-mmix/bpo-1.d: Tweak for type of linker-script-symbols no
	longer set to object.
	* ld-mmix/undef-3.d, ld-mmix/start-1.d, ld-mmix/locto-1.d,
	ld-mmix/loct-1.d, ld-mmix/locdo-1.d, ld-mmix/local7.d,
	ld-mmix/local5.d, ld-mmix/local3.d, ld-mmix/local1.d,
	ld-mmix/loc6.d, ld-mmix/loc4.d, ld-mmix/loc3.d, ld-mmix/loc2.d,
	ld-mmix/loc1.d, ld-mmix/greg-7.d, ld-mmix/greg-6.d,
	ld-mmix/greg-5.d, ld-mmix/greg-4.d, ld-mmix/greg-3.d,
	ld-mmix/greg-2.d, ld-mmix/greg-19.d, ld-mmix/greg-1.d,
	ld-mmix/bspec2.d, ld-mmix/bspec1.d, ld-mmix/bpo-9.d,
	ld-mmix/bpo-6.d, ld-mmix/bpo-5.d, ld-mmix/bpo-4.d,
	ld-mmix/bpo-3.d, ld-mmix/bpo-2.d, ld-mmix/bpo-19.d,
	ld-mmix/bpo-18.d, ld-mmix/bpo-17.d, ld-mmix/bpo-16.d,
	ld-mmix/bpo-14.d, ld-mmix/bpo-11.d, ld-mmix/bpo-10.d: Ditto.

	2002-03-11  Andreas Jaeger  <aj@suse.de>
	* ld-elfweak/strongdata.sym: Allow bss section for GCC 3.2 that
	places zero initialized data in the bss.
	* ld-elfweak/lddsodata.dsym: Likewise.

2002-04-06  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-2.d, ld-cris/dso-2.s, ld-cris/hide1: New test.

2002-02-18  Daniel Jacobowitz  <drow@mvista.com>

	* ld-elfvsb/sh1.c: Fix typo in last change.

2002-02-17  Daniel Jacobowitz  <drow@mvista.com>

	* ld-elfvsb/sh1.c: Use #pragma weak.

2002-02-17  Daniel Jacobowitz  <drow@mvista.com>

	* vers.exp: Do not call diff -q.

2002-02-18  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* ld-selective/selective.exp: Link against libgcc on
	hppa*-*-linux* targets.

2002-02-17  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/b-nosym.d, ld-mmix/sec-6.d: Tweak for change in symbol
	output.
	* ld-mmix/sec-7m.d, ld-mmix/sec-7a.s, ld-mmix/sec-7b.s,
	ld-mmix/sec-7c.s, ld-mmix/sec-7d.s, ld-mmix/sec-7e.s: New test.

2002-02-11  Alexandre Oliva  <aoliva@redhat.com>

	* ld-sh/sh64/reldl64.rd: Add relocation symbol data in info field.